Remove and Activate Article Implemented

--- a/BlogON.Presentation/Areas/Admin/Pages/Article/Index.cshtml
+++ b/BlogON.Presentation/Areas/Admin/Pages/Article/Index.cshtml
@@ -29,7 +29,7 @@
 
                         <th>عنوان</th>
                         <th>دسنه</th>
-                        <th>وضغیت</th>
+                        <th>وضعیت</th>
                         <th>تاریخ</th>
                         <th></th>
                     </tr>
