--- a/BlogON.Presentation/Pages/Index.cshtml
+++ b/BlogON.Presentation/Pages/Index.cshtml
@@ -19,21 +19,26 @@
                             <img src="@item.Image" alt="@item.Title">
                             <figcaption class="meta-fig">
                                 <span><i class="fa fa-clock-o"></i> @item.CreationDate</span>&nbsp;
-                                <span><i class="fa fa-comment-o"></i> 12</span>
+
                             </figcaption>
                             <figcaption class="view">
                                 <span>@item.Category</span>
-                               
+
                             </figcaption>
                         </figure>
                         <div class="text-p">
                             <h5>@item.Title</h5>
                             <p>
-                                
-                              @item.ShortDescription
+
+                                @item.ShortDescription
                             </p>
                             <div class="text-rigt">
                                 <a asp-page="/Single" asp-route-id="@item.Id">ادامه ...</a>
+                            </div>
+                            <div class="text-left">
+                                <span><i class="fa fa-comment-o"></i> @item.CommentsCount</span>
+
+
                             </div>
                         </div>
                     </a>
@@ -44,15 +49,15 @@
 
 
         @*<div class="col-md-12 text-center">
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="#">قبلی</a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">بعدی</a></li>
-                </ul>
-            </nav>
-        </div>*@
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">قبلی</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">بعدی</a></li>
+                    </ul>
+                </nav>
+            </div>*@
     </div>
 </div>
